--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync"
+		"prepare": "svelte-kit sync",
+		"deploy": "npm run build && git subtree push --prefix build origin gh-pages"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
