Fix deploy script to push to gh-pages branch

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"deploy": "vite build && npx gh-pages -d build"
+		"deploy": "vite build && npx gh-pages -d build -b gh-pages"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
